# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/note/create-note": {
             "post": {
-                "description": "create new note",
+                "description": "Создание новой заметки",
                 "consumes": [
                     "application/json"
                 ],
@@ -34,7 +34,7 @@
                     },
                     {
                         "description": "Описание",
-                        "name": "descrition",
+                        "name": "description",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -52,13 +52,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
                         }
                     }
                 }
@@ -66,7 +66,7 @@
         },
         "/note/get-all": {
             "get": {
-                "description": "get all note",
+                "description": "Метод для получения всех заметок",
                 "consumes": [
                     "application/json"
                 ],
@@ -87,13 +87,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "int"
+                            "type": "string"
                         }
                     }
                 }
